# opengl-elephant

./: CMakeLists.txt  README.md  main.cpp
models/: Floor.mtl  Low Poly Elephant.mtl  Low_Poly_Bush_001.mtl  Low_Poly_Bush_002.mtl  Low_Poly_Grass_001.mtl  Low_Poly_Grass_002.mtl  Low_Poly_Tree_001.mtl  Low_Poly_Tree_002.mtl  Low_Poly_Tree_003.mtl  Low_Poly_Tree_004.mtl  Low_Poly_Tree_005.mtl  Low_Poly_Tree_006.mtl  Low_Poly_Tree_Stump_001.mtl  Low_Poly_Tree_Stump_002.mtl
src/: CMakeLists.txt  main.cpp
